Adding push notification

--- a/ionic.project
+++ b/ionic.project
@@ -1,6 +1,6 @@
 {
-  "name": "Festivales",
-  "app_id": "",
+  "name": "Les Arts",
+  "app_id": "com.gravedad.lesarts",
   "browsers": [
     {
       "platform": "android",
