--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.5.3",
+    "merge-stream": "^1.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -19,20 +21,25 @@
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
-    "cordova-plugin-inappbrowser",
     {
       "variables": {
         "SENDER_ID": "les-arts"
       },
       "locator": "phonegap-plugin-push",
       "id": "phonegap-plugin-push"
-    }
+    },
+    "cordova-plugin-appavailability@0.4.2",
+    "cordova-plugin-compat@1.0.0",
+    "cordova-plugin-geolocation@2.1.0",
+    "cordova-plugin-inappbrowser@1.2.1",
+    "cordova-plugin-splashscreen@3.1.0",
+    "cordova-plugin-x-socialsharing@5.0.12",
+    "cordova-sqlite-storage"
   ],
   "cordovaPlatforms": [
-    "ios",
-    "android"
+    "android",
+    "ios"
   ]
 }
