--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4",
-    "ngstorage": "https://github.com/gsklee/ngStorage.git#~0.3.10"
+    "ngstorage": "https://github.com/gsklee/ngStorage.git#~0.3.10",
+    "google-analytics-plugin": "https://github.com/danwilson/google-analytics-plugin.git#~0.8.1"
   },
   "dependencies": {
     "ng-cordova-oauth": "~0.2.3",
