--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "ionic-ion-frost": "~1.0.0",
     "angular-soundmanager2": "~0.5.6",
     "ng-twitter-api": "~0.1.5",
-    "ionic-zoom-view": "~2.0.0"
+    "ionic-zoom-view": "~2.0.0",
+    "angular-moment": "~0.10.3"
   }
 }
