--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.5.4",
+    "merge-stream": "^1.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -19,10 +21,15 @@
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
-    "cordova-plugin-inappbrowser",
+    "cordova-plugin-appavailability@0.4.2",
+    "cordova-plugin-compat@1.0.0",
+    "cordova-plugin-geolocation@2.1.0",
+    "cordova-plugin-inappbrowser@1.2.1",
+    "cordova-plugin-splashscreen@3.1.0",
+    "cordova-plugin-x-socialsharing@5.0.12",
+    "cordova-sqlite-storage",
     {
       "variables": {
         "SENDER_ID": "1001556531635"
@@ -30,7 +37,7 @@
       "locator": "phonegap-plugin-push",
       "id": "phonegap-plugin-push"
     },
-    "phonegap-plugin-push"
+    "cordova-plugin-google-analytics@0.8.1"
   ],
   "cordovaPlatforms": [
     "ios",
