--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "Festival Viña rock",
+  "name": "festival",
   "version": "1.1.1",
   "description": "Festivales: Viña rock",
   "dependencies": {
     "angular-load": "^0.4.1",
-    "gulp": "^3.5.6",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.2.0",
     "gulp-install": "^0.6.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^2.0.0",
+    "merge-stream": "^1.0.0",
+    "uglify-js": "^2.7.3"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -20,10 +23,15 @@
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
-    "cordova-plugin-inappbrowser",
+    "cordova-plugin-appavailability@0.4.2",
+    "cordova-plugin-compat@1.0.0",
+    "cordova-plugin-geolocation@2.1.0",
+    "cordova-plugin-inappbrowser@1.2.1",
+    "cordova-plugin-splashscreen@3.1.0",
+    "cordova-plugin-x-socialsharing@5.0.12",
+    "cordova-sqlite-storage",
     {
       "variables": {
         "SENDER_ID": "678065811941"
@@ -31,7 +39,7 @@
       "locator": "phonegap-plugin-push",
       "id": "phonegap-plugin-push"
     },
-    "phonegap-plugin-push"
+    "cordova-plugin-google-analytics@0.8.1"
   ],
   "cordovaPlatforms": [
     "ios",
