--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-uglify": "^2.0.1",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
